@@ -1129,7 +1129,7 @@ class PlgSystemDebug extends JPlugin
 	 *
 	 * @since   3.1.2
 	 */
-	protected function renderBars(&$bars, $class = '', $id = '')
+	protected function renderBars(&$bars, $class = '', $id = null)
 	{
 		$html = array();
 
@@ -1142,7 +1142,7 @@ class PlgSystemDebug extends JPlugin
 
 			$barClass = trim('bar dbg-bar ' . (isset($bar->class) ? $bar->class : ''));
 
-			if ($id != '' && $i == $id)
+			if ($id !== null && $i == $id)
 			{
 				$barClass .= ' dbg-bar-active';
 			}
@@ -1227,6 +1227,12 @@ class PlgSystemDebug extends JPlugin
 
 					// Display duration in ms with the unit instead of seconds:
 					$html[] = sprintf('%.1f&nbsp;ms', $td * 1000);
+				}
+				elseif ($k == 'Error')
+				{
+					// An error in the EXPLAIN query occured, display it instead of the result (means original query had syntax error most probably):
+					$html[] = '<td class="dbg-warning">' . htmlspecialchars($td);
+					$hasWarnings = true;
 				}
 				elseif ($k == 'key')
 				{
@@ -1315,8 +1321,14 @@ class PlgSystemDebug extends JPlugin
 
 				if ((stripos($query, 'select') === 0) || ($dbVersion56 && ((stripos($query, 'delete') === 0) || (stripos($query, 'update') === 0))))
 				{
-					$db->setQuery('EXPLAIN ' . ($dbVersion56 ? 'EXTENDED ' : '') . $query);
-					$this->explains[$k] = $db->loadAssocList();
+					try
+					{
+						$db->setQuery('EXPLAIN ' . ($dbVersion56 ? 'EXTENDED ' : '') . $query);
+						$this->explains[$k] = $db->loadAssocList();
+					}
+					catch (Exception $e) {
+						$this->explains[$k] = array(array('Error' => $e->getMessage()));
+					}
 				}
 			}
 		}
