@@ -28,6 +28,7 @@ $ -> Language fix or change
 04-Jul-2013 Jean-Marie Simonet
  # [#31138] Correct the Bug after #31034. Thanks Tobias Zulauf and Peter Wiseman
  # [#31324] Fixed error about Undefined property JTableUser::$checked_out when saving a user. Thanks Peter van Westen
+ # [#31327] Debug plugin (git master version only) doesn't catch SQL errors. Thanks Beat.
 
 03-Jul-2013 Jean-Marie Simonet
  # [#31321] Fixed issue with tooltip text not being escaped when no title is given. Thanks Peter van Westen
